0026398: Tricheck command should be extended to show free nodes and links breaking mesh consistency

Remark from MSV